add NSA325 and NSA320 u-boot, add uEnv.txt loading, modified default envs

--- a/board/zyxel/nsa320/kwbimage.cfg
+++ b/board/zyxel/nsa320/kwbimage.cfg
@@ -1,15 +1,34 @@
 #
-# (C) Copyright 2009 Marvell Semiconductor <www.marvell.com> Written-by: Prafulla Wadaskar <prafulla@marvell.com>
+# Based on guruplug.c originally written by
+# Siddarth Gore <gores@marvell.com>
+# (C) Copyright 2009
+# Marvell Semiconductor <www.marvell.com>
 #
-# SPDX-License-Identifier:	GPL-2.0+
+# See file CREDITS for list of people who contributed to this
+# project.
 #
-# Refer to doc/README.kwbimage for more details about how-to
-# configure and create kirkwood boot images.
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License as
+# published by the Free Software Foundation; either version 2 of
+# the License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+# MA 02110-1301 USA
+#
+# Refer docs/README.kwimage for more details about how-to configure
+# and create kirkwood boot image
 #
 
 # Boot Media configurations
 BOOT_FROM	nand
-#BOOT_FROM      uart
+# BOOT_FROM	uart
 NAND_ECC_MODE	default
 NAND_PAGE_SIZE	0x0800
 
@@ -58,10 +77,10 @@ DATA 0xFFD0140C 0x00000a33	#  DDR Timing (High)
 # bit31-13: zero required
 
 DATA 0xFFD01410 0x000000cc	#  DDR Address Control
-# bit1-0:   00, Cs0width=x8
-# bit3-2:   11, Cs0size=1Gb
-# bit5-4:   00, Cs1width=x8
-# bit7-6:   11, Cs1size=1Gb
+# bit1-0:   01, Cs0width=x8
+# bit3-2:   10, Cs0size=1Gb
+# bit5-4:   01, Cs1width=x8
+# bit7-6:   10, Cs1size=1Gb
 # bit9-8:   00, Cs2width=nonexistent
 # bit11-10: 00, Cs2size =nonexistent
 # bit13-12: 00, Cs3width=nonexistent
